--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 			<div class="categorias" id="categorias">
 				<a href="#" class="activo">Todos</a>
 				<a href="#">Camisetas</a>
-				<a href="#">Ciudades</a>
-				<a href="#">Personas</a>
-				<a href="#">Animales</a>
+				<a href="#">Mascarillas</a>
+				<a href="#">una</a>
+				<a href="#">otra</a>
 			</div>
 		</header>
 
@@ -37,7 +37,7 @@
 				 data-descripcion="1.- Lorem ipsum dolor sit amet consectetur."
 			>
 				<div class="item-contenido">
-                                    <img src="camisetas/1617963293096.jpg" alt="">
+                                    <img src="camisetas/propiedad_de_mi_novio.jpg" alt="">
 				</div>
 			</div>
 
@@ -47,7 +47,7 @@
 				 data-descripcion="2.- Lorem ipsum dolor sit amet consectetur."
 			>
 				<div class="item-contenido">
-                                    <img src="camisetas/1617963293106.jpg" alt="">
+                                    <img src="camisetas/apple.jpg" alt="">
 				</div>
 			</div>
 
@@ -57,7 +57,7 @@
 				 data-descripcion="3.- Lorem ipsum dolor sit amet consectetur."
 			>
 				<div class="item-contenido">
-                                    <img src="camisetas/1617963293114.jpg" alt="">
+                                    <img src="camisetas/aguila.jpg" alt="">
 				</div>
 			</div>
 
@@ -67,7 +67,7 @@
 				 data-descripcion="4.- Lorem ipsum dolor sit amet consectetur."
 			>
 				<div class="item-contenido">
-                                    <img src="camisetas/1617963293121.jpg" alt="">
+                                    <img src="camisetas/formula1.jpg" alt="">
 				</div>
 			</div>
 
@@ -77,17 +77,17 @@
 				 data-descripcion="5.- Lorem ipsum dolor sit amet consectetur."
 			>
 				<div class="item-contenido">
-                                    <img src="camisetas/1617963293128.jpg" alt="">
+                                    <img src="camisetas/rolling.jpg" alt="">
 				</div>
 			</div>
 
 			<div class="item"
 				 data-categoria="camisetas"
-				 data-etiquetas="camisetas negra"
+				 data-etiquetas="camisetas negra angel demonio"
 				 data-descripcion="6.- Lorem ipsum dolor sit amet consectetur."
 			>
 				<div class="item-contenido">
-                                    <img src="camisetas/1617963293135.jpg" alt="">
+                                    <img src="camisetas/angel_and_demon.jpg" alt="">
 				</div>
 			</div>
 
@@ -97,7 +97,7 @@
 				 data-descripcion="6.- Lorem ipsum dolor sit amet consectetur."
 			>
 				<div class="item-contenido">
-                                    <img src="camisetas/1617963293141.jpg" alt="">
+                                    <img src="camisetas/skater.jpg" alt="">
 				</div>
 			</div>
 
