--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap" rel="stylesheet">
 	<script src="https://kit.fontawesome.com/2c36e9b7b1.js"></script>
 	<link rel="stylesheet" href="estilos.css">
-	<title>Portafolio Dinamico - Carlos Arturo</title>
+	<title>Portafolio Dinamico - STV Bordados </title>
 </head>
 <body>
 	
